kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: solomon
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
      environment: prod
  template:
    metadata:
      labels:
        app: auth
        environment: prod
    spec:
      serviceAccountName: auth-service-account
      imagePullSecrets:
        - name: ghcr-secret
      volumes:
        - name: secrets-store-volume
          csi:
            driver: secrets-store-gke.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "auth-secrets"
        - name: env-vars
          emptyDir: {}
      containers:
        - name: auth-container
          image: ghcr.io/danielfloresdiaz/auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9999
          readinessProbe:
            httpGet:
              path: /health
              port: 9999
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 9999
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
          command:
            - "/bin/sh"
            - "-c"
            - |
              [...]
          volumeMounts:
            - name: secrets-store-volume
              mountPath: "/mnt/secrets"
              readOnly: true
            - name: env-vars
              mountPath: "/env-vars"
        # Cloud SQL Auth Proxy sidecar
        - name: cloudsql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:latest
          imagePullPolicy: Always
          command:
            - "/cloud-sql-proxy"
            - "--private-ip"
            - "--structured-logs"
            - "--quiet"
            - "--port=5432"
            - "--address=0.0.0.0"
            - "project-66012d22-0833-4897-a6e:europe-southwest1:solomon"
          resources:
            requests:
              cpu: "150m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
          ports:
            - containerPort: 5432
          securityContext:
            runAsNonRoot: true
